"Use my chosen colors" should override border-colors too.  Bug 156002, r+sr=dbaron